created modules folder for the replace function

--- a/templates/template-product.html
+++ b/templates/template-product.html
@@ -16,6 +16,7 @@
     <title>{%PRODUCTNAME%} {%IMAGE%} /// NODE FARM</title>
 
     <style>
+      /*inline so we dont have to handle all the seperate requests*/
       *,
       *::before,
       *::after {
